# Engine-OpenGL

./: .gitignore  CMakeLists.txt  README.md
Engine/src/: Camera.cpp  Engine.cpp  InputManager.cpp  Mesh.cpp  WindowManager.cpp  main.cpp
Engine/src/Shaders/: shader.vs
Engine/src/includes/: Camera.h  Engine.h  InputManager.h  Mesh.h  Model.h  WindowManager.h
TilemapEditor/: TilemapEditor.cpp  main.cpp  pseudocode
TilemapEditor/Shaders/: shader.fs  shader.vs  ui_shader.fs  ui_shader.vs
TilemapEditor/includes/: TilemapEditor.h
cmake/: FindAssimp.cmake  FindGLFW3.cmake  FindGlad.cmake
lib/assimp/include/assimp/: revision.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/includes/: imgui_impl_glfw.h  imgui_impl_opengl3.h
lib/imgui/src/: imgui_widgets.cpp
src/: Engine.cpp  Model.cpp  main.cpp  notes.txt
src/Shaders/: shader.fs  shader.vs
src/includes/: Engine.h  SHADER.h
